@@ -1,5 +1,9 @@
 = CHANGELOG
 
+== Unreleased
+
+ * For big endian input, return `WKBReadError::UnsupportedBigEndian`, rather than panic
+
 == v0.5.0 (2020-04-25)
 
  * Switch `geo` dependency to the `geo-types` crate (v0.4)
